--- a/style.css
+++ b/style.css
@@ -29,12 +29,15 @@ body{
 .profile img {
     margin-top: 20px;
     border-radius: 50%;
+    box-shadow: 0px 10px 44px -20px black;
 }
 
 .profile h1{
     font-weight: bold;
     color: #4117f3;
     padding-top: 20px;
+    padding: 20px;
+    text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5), 2px 2px 2px rgba(206,89,55,0);
 }
 
 .links ul{
@@ -54,6 +57,11 @@ body{
 .links li{
     display: flex;
     margin: 20px;
+    width: 500px;
+    height: 70px;
+    background-image: linear-gradient(50deg, #271061, #4700ff);
+    border-radius: 8px;
+    box-shadow:5px 5px 15px -3px black;
     
 }
 
@@ -63,20 +71,20 @@ body{
 }
 
 .link_btn {
+    width: 500px;
+    height: 70px;
     display: flex;
     align-items: center;
     padding-left: 10px;
-    width: 500px;
-    height: 70px;
-    background-color: #4117f3;
-    border-radius: 8px;
-    box-shadow: 20px 20px 30px -30px #000000;
+   
+    
+    
 }
 
 .link_btn h5{
-    padding-left: 20px;
     font-weight:bold;
-    padding-left: 140px;
+    margin-left: 120px;
+    padding: 15px;
     
 }
 
@@ -96,7 +104,7 @@ footer{
     }
 
     .link_btn h5{
-        padding-left: 80px ;
+        margin-left: 70px ;
     }
 }
 
@@ -106,7 +114,7 @@ footer{
     }
 
     .link_btn h5{
-        padding-left:35px ;
+        margin-left:25px ;
     }
 }
 @media screen and (max-width:340px){
@@ -115,6 +123,6 @@ footer{
     }
 
     .link_btn h5{
-        padding-left:30px ;
+        margin-left:20px ;
     }
 }
