--- a/style.css
+++ b/style.css
@@ -32,14 +32,27 @@ body{
     margin-top: 20px;
     border-radius: 50%;
     box-shadow: 0px 10px 44px -20px black;
+
 }
 
 .profile h1{
+    font-size:3.5rem;
     font-weight: bold;
-    color: #4117f3;
+    color: #3219a1;
     padding-top: 20px;
     padding: 20px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
     text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5), 2px 2px 2px rgba(206,89,55,0);
+}
+
+.profile h4{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #3219a1;
+    margin-bottom: 20px;
+    letter-spacing: -1px;
+    text-shadow: -1px -1px 1px rgba(255, 255, 255, .1), 1px 1px 1px rgba(0, 0, 0, .5), 2px 2px 2px rgba(206, 89,55,0);
 }
 
 .links ul{
